--- a/overgod.cfg
+++ b/overgod.cfg
@@ -1,12 +1,12 @@
 [Misc]
-Seed = 9871
+Seed = 7418
 
 [Options]
 Sound_mode = 2
-Run_vsync = 1
-Sound_volume = 100
-Ambience_volume = 100
-Resolution = 2
+Run_vsync = 0
+Sound_volume = 40
+Ambience_volume = 40
+Resolution = 0
 # If the game crashes, change the Resolution setting to 0, which means 640x480 fullscreen.
 # 1 means 800x600, but that might not work on all computers. 
 # Values: 0 = 640x480 fullscreen; 1 = 800x600 fullscreen; 2 = 640x480 windowed; 3 = 800x600 windowed
@@ -16,72 +16,72 @@ Colour_text = 0
 Key0 = 84
 Key1 = 82
 Key2 = 83
-Key3 = 1
-Key4 = 19
+Key3 = 26
+Key4 = 24
 Key5 = 85
 Key6 = 24
 Key7 = 24
 Key8 = 24
-Key9 = 4
+Key9 = 3
 
 [Player2Keys]
-Key0 = 9
-Key1 = 10
-Key2 = 12
-Key3 = 20
-Key4 = 26
-Key5 = 11
+Key0 = 45
+Key1 = 41
+Key2 = 43
+Key3 = 37
+Key4 = 89
+Key5 = 39
 Key6 = 75
 Key7 = 75
 Key8 = 75
-Key9 = 21
+Key9 = 87
 
 [Highscores_single]
 Name0 = Xom
 Score0 = 10000
 Level0 = 10
-Name1 = Michi
-Score1 = 1410
-Level1 = 4
-Name2 = Vehumet
-Score2 = 1000
-Level2 = 7
-Score3 = 950
+Name1 = Vehumet
+Score1 = 1000
+Level1 = 7
+Name2 = Makhleb
+Score2 = 950
+Level2 = 6
+Score3 = 900
 Level3 = 6
-Name3 = Makhleb
-Score4 = 900
-Level4 = 6
-Name4 = Kikubaaqudgha
-Score5 = 890
-Level5 = 3
-Name5 = Michi
-Score6 = 850
+Name3 = Kikubaaqudgha
+Score4 = 850
+Level4 = 5
+Name4 = Yredelemnul
+Score5 = 800
+Level5 = 5
+Name5 = Nemelex Xobeh
+Score6 = 750
 Level6 = 5
-Name6 = Yredelemnul
-Score7 = 800
-Level7 = 5
-Name7 = Nemelex Xobeh
-Score8 = 750
-Level8 = 5
-Name8 = The Shining One
-Score9 = 700
+Name6 = The Shining One
+Score7 = 700
+Level7 = 4
+Name7 = Zin
+Score8 = 650
+Level8 = 4
+Name8 = Sif Muna
+Score9 = 600
 Level9 = 4
-Name9 = Zin
-Score10 = 650
+Name9 = Elyvilon
+Score10 = 550
 Level10 = 4
-Name10 = Sif Muna
-Score11 = 600
-Level11 = 4
-Name11 = Elyvilon
-Score12 = 550
-Level12 = 4
-Name12 = Okawaru
-Score13 = 500
-Level13 = 3
-Name13 = Trog
-Score14 = 450
-Level14 = 2
-Name14 = Sigmund
+Name10 = Okawaru
+Score11 = 500
+Level11 = 3
+Name11 = Trog
+Score12 = 450
+Level12 = 2
+Name12 = Sigmund
+Score13 = 400
+Level13 = 2
+Name13 = Margery
+Score14 = 350
+Level14 = 1
+Name14 = Boris
 
 [Highscores_Coop]
 Score0 = 1000
@@ -131,7 +131,7 @@ Level14 = 1
 Name14 = CaptainP
 
 [Highscores_TA]
-best_time = 4696
+best_time = 300
 best_name = Sluggish
 
 [Unlock]
